--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="author" content="[Dein Name]">
+    <meta name="author" content="Dominik">
     <meta name="description" content="Meine erste Webseite.">
-    <title>Webseite von [Dein Name]</title>
+    <title>Webseite von Dominik</title>
     <link rel="icon" href="https://wurzelzieher.de/aeg/LogoE.png" type="image/png">
     <link rel="stylesheet" href="https://wurzelzieher.de/aeg/style.css">
 </head>
 
 <body>
-    <h1>Webseite von [Dein Name]</h1>
+    <h1>Webseite von Dominik</h1>
     <p>Dies ist meine Webseite.</p>
     
     <script src="https://wurzelzieher.de/aeg/h02.js"></script>
